# simdjson-py

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
examples/: README.md
src/lib/: CMakeLists.txt  _lib.cpp  _simdjson_version.cpp  error.cpp  parser.cpp
src/simdjson/: _version.py
tests/: test.py  test_error.py  test_import.py
