[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "simdjson"
version = "0.0.1"
description = "An example minimal project that compiles bindings using nanobind and scikit-build"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Lanqing Huang", email = "lqhuang@typef.io" }]
classifiers = ["License :: OSI Approved :: BSD License"]

[project.urls]
Homepage = "https://github.com/lqhuang/simdjson-py"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8"

# The wheel will automatically look for Python packages at
# src/<package_name>, python/<package_name>, and <package_name>,
# in that order.
wheel.packages = ["src/simdjson"]
wheel.py-api = "cp39"
wheel.license-files = ["LICENSE"]

# build-dir = "build/{wheel_tag}"

experimental = true

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
